ajuste inclusão de icone

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   
     <!-- Botão para procurar vídeos -->
     <button id="openVideoBtn" class="px-2 py-2 bg-blue-500 hover:bg-blue-700 rounded mb-6">
-      <i class="fas fa-film"></i> Procurar Vídeos
+      <i class="fas fa-film"></i> Procurar Vídeos <i class="fa-solid fa-magnifying-glass"></i>
     </button>
   
     <!-- Lista de vídeos na fila -->
