--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="mt-3 text-center">
                   <h3 class="text-lg font-semibold leading-6 text-gray-900" id="modal-about-title">Sobre o Aplicativo</h3>
                   <div class="mt-2">
-                      <p class="text-sm text-gray-500"><strong>Nome:</strong> YouTube Player</p>
+                      <p class="text-sm text-gray-500"><strong>Nome:</strong>Vídeo Player</p>
                       <p class="text-sm text-gray-500"><strong>Versão:</strong> <span id="versionText"></span></p>
                       <p class="text-sm text-gray-500"><strong>Autor:</strong> <span id="authorText"></span></p>
                       <p class="text-sm text-gray-500">
