--- a/loading.html
+++ b/loading.html
@@ -20,7 +20,7 @@
       box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
     }
       .loading {
-      background: #000;
+      background: #080b1d;
       width: 100vw;
       height: 100vh;
       overflow: hidden;
@@ -50,7 +50,7 @@
       -webkit-animation: spin .75s linear infinite;
       position: fixed;
       border-radius: 50%;
-      border: 2px solid #000;
+      border: 2px solid #9b9b9b;
       border-top: 2px solid #0091f8;
       border-bottom: 2px solid #2a02ba;
       z-index: 1;
