controle de volume para ajustar, fucoes pay e pause

--- a/video.html
+++ b/video.html
@@ -20,10 +20,10 @@
 
   <script>
     const { ipcRenderer } = require('electron');
+    const videoPlayer = document.getElementById('videoPlayer');
 
     // Carrega o vídeo
     ipcRenderer.on('load-video', (event, videoUrl) => {
-      const videoPlayer = document.getElementById('videoPlayer');
       videoPlayer.src = videoUrl;
       videoPlayer.play();
 
@@ -42,7 +42,6 @@
 
     // Função para fade-out do vídeo e áudio
     function fadeOutAudioAndClose() {
-      const videoPlayer = document.getElementById('videoPlayer');
       let volume = videoPlayer.volume;
       const fadeInterval = setInterval(() => {
         if (volume > 0) {
@@ -58,7 +57,7 @@
       videoPlayer.classList.add('fade-out');
     }
 
-    // Aplica o fade-out e fecha
+    // Escuta para aplicar o fade-out e fechar
     ipcRenderer.on('fade-out', () => {
       fadeOutAudioAndClose();
     });
@@ -73,19 +72,25 @@
             videoPlayer.pause();
           }
           break;
+
         case 'stop':
-          videoPlayer.close();
+          // Executa fade-out e reinicia o vídeo, depois fecha a janela
+          fadeOutAudioAndClose();
           videoPlayer.currentTime = 0; // Reinicia o vídeo para o início
           break;
+
         case 'attenuate':
           videoPlayer.volume = value; // Atenua o volume (ex: 0.8 para 80%)
           break;
+
         case 'volume':
           videoPlayer.volume = value; // Define o volume para o valor especificado
           break;
+
         case 'repeat':
           videoPlayer.loop = !videoPlayer.loop; // Alterna o loop do vídeo
           break;
+
         case 'seek':
           videoPlayer.currentTime = value; // Pula para o tempo especificado
           break;
