--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
   
     <!-- Botão para procurar vídeos -->
-    <button id="openVideoBtn" class="px-2 py-2 bg-blue-500 hover:bg-blue-700 rounded my-8">
+    <button id="openVideoBtn" class="px-2 py-2 bg-blue-500 hover:bg-blue-700 rounded my-8 fixed top-0">
       <i class="fas fa-film"></i> Procurar Vídeos <i class="fa-solid fa-magnifying-glass"></i>
     </button>
     <!-- Lista de vídeos na fila -->
