--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
     <!-- Barra de Controle de Vídeo -->
 <div id="videoControls" class="video-control fixed bottom-0 w-full flex justify-around items-center px-6 py-4 bg-gray-800 text-white">
   <button id="playPauseBtn" class="bg-blue-500 hover:bg-blue-700 rounded-full px-4 py-2">
-    <i class="fas fa-play"></i>
+    <i class="fas fa-pause"></i>
   </button>
   <button id="stopBtn" class="bg-red-500 hover:bg-red-700 rounded-full px-4 py-2">
     <i class="fas fa-stop"></i>
   </button>
   <button id="fadeOutBtn" class="bg-gray-500 hover:bg-gray-700 rounded-full px-4 py-2">
-    <i class="fas fa-volume-down"></i> Atenuar 20%
+    <i class="fas fa-volume-down"></i>20%
   </button>
   <button id="volumeNormalBtn" class="bg-gray-500 hover:bg-gray-700 rounded-full px-4 py-2">
-    <i class="fas fa-volume-up"></i> Volume 100%
+    <i class="fas fa-volume-up"></i>100%
   </button>
   <button id="repeatBtn" class="bg-green-500 hover:bg-green-700 rounded-full px-4 py-2">
     <i class="fas fa-redo"></i> Repetir
