ajuste de fade out no video ao ausar corrigir fade de 20% do volume ao clicar em atenuar

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
   <button id="stopBtn" class="bg-red-500 hover:bg-red-700 rounded-full px-4 py-2">
     <i class="fas fa-stop"></i>
   </button>
-  <button id="fadeOutBtn" class="bg-gray-500 hover:bg-gray-700 rounded-full px-4 py-2">
+  <!-- <button id="fadeOutBtn" class="bg-gray-500 hover:bg-gray-700 rounded-full px-4 py-2">
     <i class="fas fa-volume-down"></i>20%
-  </button>
+  </button> -->
   <button id="volumeNormalBtn" class="bg-gray-500 hover:bg-gray-700 rounded-full px-4 py-2">
     <i class="fas fa-volume-up"></i>100%
   </button>
