ajustes de tela
ajustado o layout de tela de usuario

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   
 
     <!-- Barra de Controle de Vídeo -->
-<div id="videoControls" class="video-control fixed bottom-0 w-full flex justify-around items-center px-6 py-4 bg-gray-800 text-white">
+<div id="videoControls" class="video-control fixed bottom-0 w-full flex justify-around items-center px-6 py-4 bg-gray-800 text-white rounded-t-2xl">
   <button id="playPauseBtn" class="bg-blue-600 hover:bg-yellow-700 rounded-full px-4 py-2">
     <i class="fas fa-pause"></i>
   </button>
